package ar.edu.utn.frba.dds.logistica.domain;

public enum EstadoRuta {
  PLANIFICADA,
  EN_CURSO,
  COMPLETADA
}
